--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
-    "@tanstack/react-table": "^8.9.2",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -43,13 +43,13 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.0",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
     "recharts": "^2.7.1",
-    "stripe": "^12.10.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
+    "stripe": "^12.14.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
     "zod": "^3.21.4",
