--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.9.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
@@ -38,6 +40,7 @@
     "eslint-config-next": "13.4.5",
     "lucide-react": "^0.244.0",
     "next": "13.4.5",
+    "next-auth": "^4.22.3",
     "next-cloudinary": "^4.12.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
