--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-avatar": "^1.0.3",
