--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.244.0",
     "next": "13.4.5",
     "next-auth": "^4.22.3",
