--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.12.0",
     "next-themes": "^0.2.1",
+    "npm": "^10.0.0",
     "postcss": "8.4.24",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
