--- a/package.json
+++ b/package.json
@@ -37,21 +37,22 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
+    "eslint-config-next": "^14.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.244.0",
-    "next": "13.4.5",
+    "next": "^14.1.0",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.12.0",
     "next-themes": "^0.2.1",
     "npm": "^10.0.0",
     "postcss": "8.4.24",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
     "recharts": "^2.7.1",
     "stripe": "^12.14.0",
