--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.244.0",
-    "next": "^14.1.0",
+    "next": "13.4.5",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.12.0",
     "next-themes": "^0.2.1",
